Add game board to HTML and CSS, add articles in HTML that hold win count

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,15 @@ body {
   grid-template-rows: auto;
   height: 100vh;
   overflow: hidden; 
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 2em;
+}
+
+article {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1em;
 }
 
 .side-box {
@@ -24,9 +33,34 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background: #ffffff
-
+  background: #ffffff;
 }
+
+h2 {
+  grid-row: 1 / 2;
+  padding: 20px;
+}
+
+.game-board
+{
+	width: 400px !important;
+  height: 400px !important;
+  background-color: orange;
+  color: black;
+  border-radius: 10px;
+	display: grid;
+	grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+}
+
+.square
+{
+  border: 1px solid black;
+  border-radius: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .right-box {
   grid-column: 3 / -1;
