--- a/styles.css
+++ b/styles.css
@@ -51,14 +51,19 @@ h2 {
 	grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
 
+ul {
+  list-style: none;
+
+}
 .square
 {
   border: 10px solid maroon;
   border-collapse: collapse;
   display: flex;
-  height: 100%;
   justify-content: center;
   align-items: center;
+  padding-inline-start: 0px;
+  height: 100%;
 }
 
 .top-left {
