--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ article {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  min-width: 10rem;
 }
 
 .left-box {
@@ -39,6 +40,7 @@ article {
 
 h2 {
   grid-row: 1 / 2;
+  min-height: 15vh;
   padding: 20px;
 }
 
@@ -52,13 +54,9 @@ h2 {
 	grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
 
-ul {
-  list-style: none;
-
-}
 .square
 {
-  border: 10px solid maroon;
+  border: 1px solid maroon;
   border-collapse: collapse;
   display: flex;
   justify-content: center;
@@ -102,12 +100,6 @@ ul {
   border-right: none;
   border-bottom: none;
 }
-
-
-
-
-
-
 
 .right-box {
   grid-column: 3 / -1;
